maplibre-style-spec/src/generator/snapshots/maplibre_style_spec__generator__tests__generate_spec_groups.snap
---
source: maplibre-style-spec/src/generator/mod.rs
expression: generate_spec_scope(&spec)
---
/// JSON number in an expression position
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
pub struct NumberLiteral(serde_json::Number);

/// JSON string in an expression position
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
pub struct StringLiteral(std::string::String);

/// GeoJSON object literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
pub struct GeoJSONObjectLiteral(geojson::GeoJson);

/// JSON object literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
pub struct JSONObjectLiteral(serde_json::Value);

/// JSON array literal
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
pub struct JSONArrayLiteral(Vec<serde_json::Value>);

/// Array whose elements are string literals (e.g. match labels)
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
pub struct ArrayOfStringLiteral(Vec<StringLiteral>);

/// Array whose elements are number literals (e.g. match labels)
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
pub struct ArrayOfNumberLiteral(Vec<NumberLiteral>);

/// This is a Maplibre Style Specification
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
pub struct MaplibreStyleSpecification;

#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
pub struct Names {
    /// A number between 0 and 10.
    pub name_one: Option<NamesNameOne>,
}

/// A number between 0 and 10.
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
pub struct NamesNameOne(serde_json::Number);

impl Default for NamesNameOne {
    fn default() -> Self {
        Self(serde_json::Number::from_f64(1.0).expect("the number is serialised from a number and is thus always valid"))
    }
}

#[cfg(test)]
mod test {
    use super::*;

}
