maplibre-style-spec/src/generator/snapshots/maplibre_style_spec__generator__tests__generate_spec_items.snap
---
source: maplibre-style-spec/src/generator/mod.rs
expression: generate_spec_scope(&spec)
---
/// This is a Maplibre Style Specification
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
pub struct MaplibreStyleSpecification;

/// A number between 0 and 10.
#[derive(serde::Deserialize, serde::Serialize, PartialEq, Debug, Clone)]
pub struct NumberOne(serde_json::Number);

impl Default for NumberOne {
    fn default() -> Self {
        Self(serde_json::Number::from_i128(0).expect("the number is serialised from a number and is thus always valid"))
    }
}

#[cfg(test)]
mod test {
    use super::*;

}
